src/wrapper/torch_api_generated.h

// THIS FILE IS AUTOMATICALLY GENERATED, DO NOT EDIT BY HAND!

void atg_abs(tensor *, tensor self);
void atg_abs_(tensor *, tensor self);
void atg_abs_out(tensor *, tensor result, tensor self);
void atg_acos(tensor *, tensor self);
void atg_acos_(tensor *, tensor self);
void atg_acos_out(tensor *, tensor result, tensor self);
void atg_adaptive_avg_pool1d(tensor *, tensor self, long int *output_size_data, int output_size_len);
void atg_adaptive_avg_pool2d(tensor *, tensor self, long int *output_size_data, int output_size_len);
void atg_adaptive_avg_pool2d_backward(tensor *, tensor grad_output, tensor self);
void atg_adaptive_avg_pool2d_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self);
void atg_adaptive_avg_pool2d_forward(tensor *, tensor self, long int *output_size_data, int output_size_len);
void atg_adaptive_avg_pool2d_forward_out(tensor *, tensor output, tensor self, long int *output_size_data, int output_size_len);
void atg_adaptive_avg_pool2d_out(tensor *, tensor output, tensor self, long int *output_size_data, int output_size_len);
void atg_adaptive_avg_pool3d(tensor *, tensor self, long int *output_size_data, int output_size_len);
void atg_adaptive_avg_pool3d_backward(tensor *, tensor grad_output, tensor self);
void atg_adaptive_avg_pool3d_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self);
void atg_adaptive_avg_pool3d_forward(tensor *, tensor self, long int *output_size_data, int output_size_len);
void atg_adaptive_avg_pool3d_forward_out(tensor *, tensor output, tensor self, long int *output_size_data, int output_size_len);
void atg_adaptive_avg_pool3d_out(tensor *, tensor output, tensor self, long int *output_size_data, int output_size_len);
void atg_adaptive_max_pool1d(tensor *, tensor self, long int *output_size_data, int output_size_len);
void atg_adaptive_max_pool2d(tensor *, tensor self, long int *output_size_data, int output_size_len);
void atg_adaptive_max_pool2d_backward(tensor *, tensor grad_output, tensor self, tensor indices);
void atg_adaptive_max_pool2d_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, tensor indices);
void atg_adaptive_max_pool2d_forward(tensor *, tensor self, long int *output_size_data, int output_size_len);
void atg_adaptive_max_pool2d_forward_out(tensor *, tensor output, tensor indices, tensor self, long int *output_size_data, int output_size_len);
void atg_adaptive_max_pool2d_out(tensor *, tensor output, tensor indices, tensor self, long int *output_size_data, int output_size_len);
void atg_adaptive_max_pool3d(tensor *, tensor self, long int *output_size_data, int output_size_len);
void atg_adaptive_max_pool3d_backward(tensor *, tensor grad_output, tensor self, tensor indices);
void atg_adaptive_max_pool3d_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, tensor indices);
void atg_adaptive_max_pool3d_forward(tensor *, tensor self, long int *output_size_data, int output_size_len);
void atg_adaptive_max_pool3d_forward_out(tensor *, tensor output, tensor indices, tensor self, long int *output_size_data, int output_size_len);
void atg_adaptive_max_pool3d_out(tensor *, tensor output, tensor indices, tensor self, long int *output_size_data, int output_size_len);
void atg_add(tensor *, tensor self, tensor other);
void atg_add1(tensor *, tensor self, scalar other);
void atg_add_(tensor *, tensor self, tensor other);
void atg_add_1(tensor *, tensor self, scalar other);
void atg_add_out(tensor *, tensor result, tensor self, tensor other);
void atg_addbmm(tensor *, tensor self, tensor batch1, tensor batch2);
void atg_addbmm_(tensor *, tensor self, tensor batch1, tensor batch2);
void atg_addbmm_out(tensor *, tensor result, tensor self, tensor batch1, tensor batch2);
void atg_addcdiv(tensor *, tensor self, tensor tensor1, tensor tensor2);
void atg_addcdiv_(tensor *, tensor self, tensor tensor1, tensor tensor2);
void atg_addcdiv_out(tensor *, tensor result, tensor self, tensor tensor1, tensor tensor2);
void atg_addcmul(tensor *, tensor self, tensor tensor1, tensor tensor2);
void atg_addcmul_(tensor *, tensor self, tensor tensor1, tensor tensor2);
void atg_addcmul_out(tensor *, tensor result, tensor self, tensor tensor1, tensor tensor2);
void atg_addmm(tensor *, tensor self, tensor mat1, tensor mat2);
void atg_addmm_(tensor *, tensor self, tensor mat1, tensor mat2);
void atg_addmm_out(tensor *, tensor result, tensor self, tensor mat1, tensor mat2);
void atg_addmv(tensor *, tensor self, tensor mat, tensor vec);
void atg_addmv_(tensor *, tensor self, tensor mat, tensor vec);
void atg_addmv_out(tensor *, tensor result, tensor self, tensor mat, tensor vec);
void atg_addr(tensor *, tensor self, tensor vec1, tensor vec2);
void atg_addr_(tensor *, tensor self, tensor vec1, tensor vec2);
void atg_addr_out(tensor *, tensor result, tensor self, tensor vec1, tensor vec2);
void atg_alias(tensor *, tensor self);
void atg_all(tensor *, tensor self, int64_t dim, int keepdim);
void atg_all_out(tensor *, tensor result, tensor self, int64_t dim, int keepdim);
void atg_alpha_dropout(tensor *, tensor input, double p, int train);
void atg_alpha_dropout_(tensor *, tensor self, double p, int train);
void atg_any(tensor *, tensor self, int64_t dim, int keepdim);
void atg_any_out(tensor *, tensor result, tensor self, int64_t dim, int keepdim);
void atg_arange1(tensor *, scalar start, scalar end, int options_kind, int options_device);
void atg_arange2(tensor *, scalar start, scalar end, scalar step, int options_kind, int options_device);
void atg_arange3(tensor *, scalar end, int options_kind, int options_device);
void atg_arange_out1(tensor *, tensor result, scalar start, scalar end);
void atg_arange_out2(tensor *, tensor result, scalar start, scalar end, scalar step);
void atg_arange_out3(tensor *, tensor result, scalar end);
void atg_argmax1(tensor *, tensor self, int64_t dim, int keepdim);
void atg_argmax2(tensor *, tensor self);
void atg_argmin1(tensor *, tensor self, int64_t dim, int keepdim);
void atg_argmin2(tensor *, tensor self);
void atg_as_strided1(tensor *, tensor self, long int *size_data, int size_len, long int *stride_data, int stride_len);
void atg_as_strided2(tensor *, tensor self, long int *size_data, int size_len, long int *stride_data, int stride_len, int64_t storage_offset);
void atg_as_strided_1(tensor *, tensor self, long int *size_data, int size_len, long int *stride_data, int stride_len);
void atg_as_strided_2(tensor *, tensor self, long int *size_data, int size_len, long int *stride_data, int stride_len, int64_t storage_offset);
void atg_asin(tensor *, tensor self);
void atg_asin_(tensor *, tensor self);
void atg_asin_out(tensor *, tensor result, tensor self);
void atg_atan(tensor *, tensor self);
void atg_atan2(tensor *, tensor self, tensor other);
void atg_atan2_(tensor *, tensor self, tensor other);
void atg_atan2_out(tensor *, tensor result, tensor self, tensor other);
void atg_atan_(tensor *, tensor self);
void atg_atan_out(tensor *, tensor result, tensor self);
void atg_avg_pool1d(tensor *, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, int ceil_mode, int count_include_pad);
void atg_avg_pool2d(tensor *, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, int ceil_mode, int count_include_pad);
void atg_avg_pool2d_backward(tensor *, tensor grad_output, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, int ceil_mode, int count_include_pad);
void atg_avg_pool2d_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, int ceil_mode, int count_include_pad);
void atg_avg_pool2d_forward(tensor *, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, int ceil_mode, int count_include_pad);
void atg_avg_pool2d_forward_out(tensor *, tensor output, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, int ceil_mode, int count_include_pad);
void atg_avg_pool2d_out(tensor *, tensor output, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, int ceil_mode, int count_include_pad);
void atg_avg_pool3d(tensor *, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, int ceil_mode, int count_include_pad);
void atg_avg_pool3d_backward(tensor *, tensor grad_output, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, int ceil_mode, int count_include_pad);
void atg_avg_pool3d_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, int ceil_mode, int count_include_pad);
void atg_avg_pool3d_forward(tensor *, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, int ceil_mode, int count_include_pad);
void atg_avg_pool3d_forward_out(tensor *, tensor output, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, int ceil_mode, int count_include_pad);
void atg_avg_pool3d_out(tensor *, tensor output, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, int ceil_mode, int count_include_pad);
void atg_baddbmm(tensor *, tensor self, tensor batch1, tensor batch2);