src/stubs/torch_bindings_generated.ml

(* THIS FILE IS AUTOMATICALLY GENERATED, DO NOT EDIT BY HAND! *)

open Ctypes

module C(F: Cstubs.FOREIGN) = struct
  open F
  type t = unit ptr
  let t : t typ = ptr void
  type scalar = unit ptr
  let scalar : scalar typ = ptr void
  let abs =
    foreign "atg_abs"
    (ptr t @-> t @-> returning void)

  let abs_ =
    foreign "atg_abs_"
    (ptr t @-> t @-> returning void)

  let abs_out =
    foreign "atg_abs_out"
    (ptr t @-> t @-> t @-> returning void)

  let acos =
    foreign "atg_acos"
    (ptr t @-> t @-> returning void)

  let acos_ =
    foreign "atg_acos_"
    (ptr t @-> t @-> returning void)

  let acos_out =
    foreign "atg_acos_out"
    (ptr t @-> t @-> t @-> returning void)

  let adaptive_avg_pool1d =
    foreign "atg_adaptive_avg_pool1d"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let adaptive_avg_pool2d =
    foreign "atg_adaptive_avg_pool2d"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let adaptive_avg_pool2d_backward =
    foreign "atg_adaptive_avg_pool2d_backward"
    (ptr t @-> t @-> t @-> returning void)

  let adaptive_avg_pool2d_backward_out =
    foreign "atg_adaptive_avg_pool2d_backward_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let adaptive_avg_pool2d_forward =
    foreign "atg_adaptive_avg_pool2d_forward"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let adaptive_avg_pool2d_forward_out =
    foreign "atg_adaptive_avg_pool2d_forward_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let adaptive_avg_pool2d_out =
    foreign "atg_adaptive_avg_pool2d_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let adaptive_avg_pool3d =
    foreign "atg_adaptive_avg_pool3d"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let adaptive_avg_pool3d_backward =
    foreign "atg_adaptive_avg_pool3d_backward"
    (ptr t @-> t @-> t @-> returning void)

  let adaptive_avg_pool3d_backward_out =
    foreign "atg_adaptive_avg_pool3d_backward_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let adaptive_avg_pool3d_forward =
    foreign "atg_adaptive_avg_pool3d_forward"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let adaptive_avg_pool3d_forward_out =
    foreign "atg_adaptive_avg_pool3d_forward_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let adaptive_avg_pool3d_out =
    foreign "atg_adaptive_avg_pool3d_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let adaptive_max_pool1d =
    foreign "atg_adaptive_max_pool1d"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let adaptive_max_pool2d =
    foreign "atg_adaptive_max_pool2d"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let adaptive_max_pool2d_backward =
    foreign "atg_adaptive_max_pool2d_backward"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let adaptive_max_pool2d_backward_out =
    foreign "atg_adaptive_max_pool2d_backward_out"
    (ptr t @-> t @-> t @-> t @-> t @-> returning void)

  let adaptive_max_pool2d_forward =
    foreign "atg_adaptive_max_pool2d_forward"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let adaptive_max_pool2d_forward_out =
    foreign "atg_adaptive_max_pool2d_forward_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let adaptive_max_pool2d_out =
    foreign "atg_adaptive_max_pool2d_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let adaptive_max_pool3d =
    foreign "atg_adaptive_max_pool3d"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let adaptive_max_pool3d_backward =
    foreign "atg_adaptive_max_pool3d_backward"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let adaptive_max_pool3d_backward_out =
    foreign "atg_adaptive_max_pool3d_backward_out"
    (ptr t @-> t @-> t @-> t @-> t @-> returning void)

  let adaptive_max_pool3d_forward =
    foreign "atg_adaptive_max_pool3d_forward"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let adaptive_max_pool3d_forward_out =
    foreign "atg_adaptive_max_pool3d_forward_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let adaptive_max_pool3d_out =
    foreign "atg_adaptive_max_pool3d_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let add =
    foreign "atg_add"
    (ptr t @-> t @-> t @-> returning void)

  let add1 =
    foreign "atg_add1"
    (ptr t @-> t @-> scalar @-> returning void)

  let add_ =
    foreign "atg_add_"
    (ptr t @-> t @-> t @-> returning void)

  let add_1 =
    foreign "atg_add_1"
    (ptr t @-> t @-> scalar @-> returning void)

  let add_out =
    foreign "atg_add_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let addbmm =
    foreign "atg_addbmm"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let addbmm_ =
    foreign "atg_addbmm_"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let addbmm_out =
    foreign "atg_addbmm_out"
    (ptr t @-> t @-> t @-> t @-> t @-> returning void)

  let addcdiv =
    foreign "atg_addcdiv"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let addcdiv_ =
    foreign "atg_addcdiv_"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let addcdiv_out =
    foreign "atg_addcdiv_out"
    (ptr t @-> t @-> t @-> t @-> t @-> returning void)

  let addcmul =
    foreign "atg_addcmul"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let addcmul_ =
    foreign "atg_addcmul_"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let addcmul_out =
    foreign "atg_addcmul_out"
    (ptr t @-> t @-> t @-> t @-> t @-> returning void)

  let addmm =
    foreign "atg_addmm"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let addmm_ =
    foreign "atg_addmm_"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let addmm_out =
    foreign "atg_addmm_out"
    (ptr t @-> t @-> t @-> t @-> t @-> returning void)

  let addmv =
    foreign "atg_addmv"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let addmv_ =
    foreign "atg_addmv_"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let addmv_out =
    foreign "atg_addmv_out"
    (ptr t @-> t @-> t @-> t @-> t @-> returning void)

  let addr =
    foreign "atg_addr"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let addr_ =
    foreign "atg_addr_"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let addr_out =
    foreign "atg_addr_out"
    (ptr t @-> t @-> t @-> t @-> t @-> returning void)

  let alias =
    foreign "atg_alias"
    (ptr t @-> t @-> returning void)

  let all =
    foreign "atg_all"
    (ptr t @-> t @-> int64_t @-> int @-> returning void)

  let all_out =
    foreign "atg_all_out"
    (ptr t @-> t @-> t @-> int64_t @-> int @-> returning void)

  let alpha_dropout =
    foreign "atg_alpha_dropout"
    (ptr t @-> t @-> double @-> int @-> returning void)

  let alpha_dropout_ =
    foreign "atg_alpha_dropout_"
    (ptr t @-> t @-> double @-> int @-> returning void)

  let any =
    foreign "atg_any"
    (ptr t @-> t @-> int64_t @-> int @-> returning void)

  let any_out =
    foreign "atg_any_out"
    (ptr t @-> t @-> t @-> int64_t @-> int @-> returning void)

  let arange1 =
    foreign "atg_arange1"
    (ptr t @-> scalar @-> scalar @-> int @-> int @-> returning void)

  let arange2 =
    foreign "atg_arange2"
    (ptr t @-> scalar @-> scalar @-> scalar @-> int @-> int @-> returning void)

  let arange3 =
    foreign "atg_arange3"
    (ptr t @-> scalar @-> int @-> int @-> returning void)

  let arange_out1 =
    foreign "atg_arange_out1"
    (ptr t @-> t @-> scalar @-> scalar @-> returning void)

  let arange_out2 =
    foreign "atg_arange_out2"
    (ptr t @-> t @-> scalar @-> scalar @-> scalar @-> returning void)

  let arange_out3 =
    foreign "atg_arange_out3"
    (ptr t @-> t @-> scalar @-> returning void)

  let argmax1 =
    foreign "atg_argmax1"
    (ptr t @-> t @-> int64_t @-> int @-> returning void)

  let argmax2 =
    foreign "atg_argmax2"
    (ptr t @-> t @-> returning void)

  let argmin1 =
    foreign "atg_argmin1"
    (ptr t @-> t @-> int64_t @-> int @-> returning void)

  let argmin2 =
    foreign "atg_argmin2"
    (ptr t @-> t @-> returning void)

  let as_strided1 =
    foreign "atg_as_strided1"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> returning void)

  let as_strided2 =
    foreign "atg_as_strided2"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> returning void)

  let as_strided_1 =
    foreign "atg_as_strided_1"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> returning void)

  let as_strided_2 =
    foreign "atg_as_strided_2"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> returning void)

  let asin =
    foreign "atg_asin"
    (ptr t @-> t @-> returning void)

  let asin_ =
    foreign "atg_asin_"
    (ptr t @-> t @-> returning void)

  let asin_out =
    foreign "atg_asin_out"
    (ptr t @-> t @-> t @-> returning void)

  let atan =
    foreign "atg_atan"
    (ptr t @-> t @-> returning void)

  let atan2 =
    foreign "atg_atan2"
    (ptr t @-> t @-> t @-> returning void)

  let atan2_ =
    foreign "atg_atan2_"
    (ptr t @-> t @-> t @-> returning void)

  let atan2_out =
    foreign "atg_atan2_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let atan_ =
    foreign "atg_atan_"
    (ptr t @-> t @-> returning void)

  let atan_out =
    foreign "atg_atan_out"
    (ptr t @-> t @-> t @-> returning void)

  let avg_pool1d =
    foreign "atg_avg_pool1d"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> int @-> returning void)

  let avg_pool2d =
    foreign "atg_avg_pool2d"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> int @-> returning void)

  let avg_pool2d_backward =
    foreign "atg_avg_pool2d_backward"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> int @-> returning void)

  let avg_pool2d_backward_out =
    foreign "atg_avg_pool2d_backward_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> int @-> returning void)

  let avg_pool2d_forward =
    foreign "atg_avg_pool2d_forward"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> int @-> returning void)

  let avg_pool2d_forward_out =
    foreign "atg_avg_pool2d_forward_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> int @-> returning void)

  let avg_pool2d_out =
    foreign "atg_avg_pool2d_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> int @-> returning void)

  let avg_pool3d =
    foreign "atg_avg_pool3d"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> int @-> returning void)

  let avg_pool3d_backward =
    foreign "atg_avg_pool3d_backward"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> int @-> returning void)

  let avg_pool3d_backward_out =
    foreign "atg_avg_pool3d_backward_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> int @-> returning void)

  let avg_pool3d_forward =
    foreign "atg_avg_pool3d_forward"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> int @-> returning void)

  let avg_pool3d_forward_out =
    foreign "atg_avg_pool3d_forward_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> int @-> returning void)

  let avg_pool3d_out =
    foreign "atg_avg_pool3d_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> int @-> returning void)

  let baddbmm =
    foreign "atg_baddbmm"
    (ptr t @-> t @-> t @-> t @-> returning void)
